Added defaults for booleans

--- a/contributors-gen.1
+++ b/contributors-gen.1
@@ -9,7 +9,7 @@ $ \fBcontributors-gen\fP -[wfbc] <comments>
 .TP
 .B
 \fB--write\fP, \fB-w\fP
-Write the output to the file
+Write the output to the file        (default: false)
 .TP
 .B
 \fB--file\fP, \fB-f\fP <filename>
@@ -17,7 +17,7 @@ The filename to write the output to (default: CONTRIBUTORS)
 .TP
 .B
 \fB--bots\fP, \fB-b\fP
-Whether to include bots or not
+Whether to include bots or not      (default: false)
 .RE
 .PP
 .SS Examples
