--- a/contributors-gen.1
+++ b/contributors-gen.1
@@ -2,7 +2,7 @@
 .TH contributors-gen  "03 February 2021" "" ""
 .RS
 .SS Usage
-$ \fBcontributors-gen\fP -[wfbc] <comments>
+$ \fBcontributors-gen\fP -[wfbcs] [<comments>]
 .PP
 .SS Options
 .RS
@@ -18,10 +18,16 @@ The filename to write the output to (default: CONTRIBUTORS)
 .B
 \fB--bots\fP, \fB-b\fP
 Whether to include bots or not      (default: false)
+.TP
+.B
+\fB--sort\fP, \fB-s\fP <sortType>
+The sorting style to be used        (default: abc)
 .RE
 .PP
 .SS Examples
 $ \fBcontributors-gen -w\fP
+
+$ \fBcontributors-gen -w --sort\fP cba
 
 $ \fBcontributors-gen -f\fP AUTHORS \fB-w\fP "first line" "second line"
 
